<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/loginFragment2">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.rlunaalc.examenraul.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.rlunaalc.examenraul.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.rlunaalc.examenraul.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/llistarFragment"
        android:name="com.rlunaalc.examenraul.llistar.LlistarFragment"
        android:label="fragment_llistar"
        tools:layout="@layout/fragment_llistar">
        <action
            android:id="@+id/action_llistarFragment_to_modificarFragment"
            app:destination="@id/modificarFragment" />
    </fragment>
    <fragment
        android:id="@+id/inserirFragment"
        android:name="com.rlunaalc.examenraul.inserir.InserirFragment"
        android:label="fragment_inserir"
        tools:layout="@layout/fragment_inserir" />
    <fragment
        android:id="@+id/modificarFragment"
        android:name="com.rlunaalc.examenraul.modificar.ModificarFragment"
        android:label="fragment_modificar"
        tools:layout="@layout/fragment_modificar">

        <argument
            android:name="producteId"
            app:argType="string" />

    </fragment>

    <fragment
        android:id="@+id/contacteFragment"
        android:name="com.rlunaalc.examenraul.ContacteFragment"
        android:label="fragment_contacte"
        tools:layout="@layout/fragment_contacte" />
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.rlunaalc.examenraul.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/loginFragment2"
        android:name="com.rlunaalc.examenraul.LoginFragment"
        android:label="LoginFragment" />
</navigation>